fix: update broken CSS in SRS
A follow-up to d9f57f42a7a5c88f1775bc7e66dfd50506a76d85.

--- a/code/stable/template/SRS/HTML/Template_SRS.css
+++ b/code/stable/template/SRS/HTML/Template_SRS.css
@@ -44,7 +44,7 @@ table, th, td {
   margin-right: auto;}
 th, td {border: 1px solid black; padding: 0.5em;}
 .defn-table {width: 75%; margin-top: 1%; margin-bottom: 1%;}
-.tdefn th, .ddefn th, .gdefn th, .idefn th {width: 15%;}
+.defn-table th {width: 15%;}
 .section {width: 80%; margin: 0 auto; text-align: left;}
 .code {
   display: inline-block;
